# p7-Zip

./: .gitignore  CMakeLists.txt  makefile.djgpp  makefile.hpux-acc
7zip/Bundles/Alone/: Alone.sln  Alone.vcproj
7zip/Crypto/AES/: aesopt.h
7zip/UI/Console/: Console.sln  Console.vcproj
Asm/: 7zCrcT8U_x64.asm  7zCrcT8U_x86.asm
Asm/x86/: 7zCrcT8U.asm
C/: Alloc.c  Threads.c
CMake/: SourceFiles.cmake  ThirdPartyLibraries.cmake
CMake/Hunter/: HunterConfig.cmake
CPP/7zip/Archive/: ApmHandler.cpp  ArHandler.cpp  ArchiveExports.cpp  ArjHandler.cpp  Bz2Handler.cpp  ComHandler.cpp  CpioHandler.cpp  CramfsHandler.cpp  DeflateProps.cpp  DllExports2.cpp  DmgHandler.cpp  ElfHandler.cpp  ExtHandler.cpp  FatHandler.cpp  FlvHandler.cpp  GptHandler.cpp  GzHandler.cpp  HandlerCont.cpp  HfsHandler.cpp  IhexHandler.cpp  LzhHandler.cpp  LzmaHandler.cpp  MachoHandler.cpp  MbrHandler.cpp  MslzHandler.cpp  MubHandler.cpp  NtfsHandler.cpp  PeHandler.cpp  PpmdHandler.cpp  QcowHandler.cpp  RpmHandler.cpp  SplitHandler.cpp  SquashfsHandler.cpp  SwfHandler.cpp  UefiHandler.cpp  VdiHandler.cpp  VhdHandler.cpp  VmdkHandler.cpp  XarHandler.cpp  XzHandler.cpp  (+1 more)
CPP/7zip/Common/: CWrappers.cpp  CreateCoder.cpp  FilePathAutoRename.cpp  FileStreams.cpp  FilterCoder.cpp  InBuffer.cpp  InOutTempBuffer.cpp  LimitedStreams.cpp  MemBlocks.cpp  MethodId.cpp  MethodProps.cpp  OffsetStream.cpp  OutBuffer.cpp  OutMemStream.cpp  ProgressMt.cpp  ProgressUtils.cpp  PropId.cpp  StreamBinder.cpp  StreamObjects.cpp  StreamUtils.cpp  UniqBlocks.cpp  (+1 more)
CPP/Common/: CRC.cpp  CommandLineParser.cpp  CrcReg.cpp  DynLimBuf.cpp  IntToString.cpp  Lang.cpp  ListFileUtils.cpp  MyMap.cpp  MyString.cpp  MyString.h  MyVector.cpp  MyWindows.cpp  MyWindows.h  MyXml.cpp  NewHandler.cpp  Sha1Reg.cpp  Sha256Reg.cpp  StdInStream.cpp  StdOutStream.cpp  StringConvert.cpp  StringToInt.cpp  TextConfig.cpp  UTFConvert.cpp  Wildcard.cpp  XzCrc64Reg.cpp
CPP/Windows/: COM.cpp  Clipboard.cpp  DLL.cpp  ErrorMsg.cpp  FileDir.cpp  FileFind.cpp  FileIO.cpp  FileName.cpp  PropVariant.cpp  PropVariantConv.cpp  PropVariantUtils.cpp  Registry.cpp  Synchronization.cpp  System.cpp  TimeUtils.cpp  Window.cpp
DOC/: readme.txt
DOCS/: lzma.txt
GUI/help/: 7zip.hhc  7zip.hhk
html/commands/: add.htm  delete.htm  test.htm
html/switches/: index.htm  recurse.htm
man1/: 7zr.1
myWindows/: stuff_for_cygwin.c
(+135 files in other folders)
